--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,6 +12,8 @@
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
         "tailwindcss": "^4.0.0",
-        "vite": "^6.2.4"
+        "terser": "^5.43.1",
+        "vite": "^6.2.4",
+        "vite-plugin-javascript-obfuscator": "^3.1.0"
     }
 }
